--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,19 +6,25 @@ body, html {
 .background {
   display: flex;
   background-image: url("./images/background.jpg");
-  height: 100%;
+  width: 100%;
+  height: 50vh;
+  min-height: 600px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
   z-index: -1;
 
-  .art-image {
-  }
+}
+
+.nft-wrapper {
+  margin: 100px auto 0;
+  display: block;
+  position: relative;
+}
+
+.nft {
+  
 }
 
 .art-header {
@@ -34,15 +40,20 @@ body, html {
   margin: 0 auto;
 }
 
+.content{
+  background: #2B2B2B
+  
+}
+
 .collectors-edition {
   color: white;
   margin-bottom: 50px;
 }
 
-.gif {
+.wip {
   background-image: url("./images/showcase.gif");
   display: block;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
