--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,31 @@ body, html {
   margin: 0;
 }
 
+.owner-butt {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-height: 100%;
+  flex: 1 1 auto;
+  display: flex;
+}
+
 .background {
   display: flex;
   background-image: url("./images/background.jpg");
@@ -24,7 +49,7 @@ body, html {
 }
 
 .nft {
-  
+
 }
 
 .art-header {
